[package]
name = "enum-struct"
version = "0.1.1"
edition = "2024"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["struct", "enum", "field", "record", "macro"]
categories = ["rust-patterns"]
description = "Add shared fields to each variant of the enum"

license = "MIT"
repository = "https://github.com/A4-Tacks/enum-struct-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
